2004-06-09 Mikhail Khodjaiants
	New implementation of the "Refresh" actions for registers and shared libraries.
	* icons/full/clcl16/auto_refresh_co.gif: new
	* icons/full/clcl16/refresh_co.gif: new
	* plugin.properties
	* plugin.xml	
	* CDebugImages.java
	* AbstractRefreshActionDelegate.java: new
	* RefreshRegistersAction.java: new
	* RefreshSharedLibrariesAction.java: new
	* SharedLibrariesView.java
	* Refreshaction.java: removed

2004-06-08 Mikhail Khodjaiants
	Warning clean-up.
	* DebugTextHover.java

2004-06-03 Mikhail Khodjaiants
	Added new images for the "Auto-Refresh" and "Refresh" actions.
	* icons/full/dlcl16/auto_refresh_co.gif
	* icons/full/dlcl16/refresh_co.gif
	* icons/full/elcl16/auto_refresh_co.gif
	* icons/full/elcl16/refresh_co.gif

2004-06-03 Mikhail Khodjaiants
	Changed the breakpoints and watchpoints label resources.
	* CDebugUIPluginResources.properties
	* CDTDebugModelPresentation.java

2004-05-31 Alain Magloire
	The Extension point "org.eclipse.cdt.ui.textHover"
	Changed adjust the Debugger.
	* DebugTextHover.java

2004-05-31 Mikhail Khodjaiants
	Bug 39650: the Memory window has alignment problems.
	Map the Memory view font to the platform text font which is monospace by default.
	* ICDebugPreferenceConstants.java

2004-05-28 Mikhail Khodjaiants
	New implementation of the "Add Expression" editor action.
	* AddExpressionActionDelegate.java: removed
	* AddExpressionEditorActionDelegate.java: new
	* icons/full/dtool16/watch_exp.gif: new
	* icons/full/etool16/watch_exp.gif: new
	* plugin.xml

2004-05-28 Mikhail Khodjaiants
	Changed the error handling of the "Add Globals" and "Enable/Disable Variable" actions.
	* AddGlobalsActionDelegate.java
	* EnableVariablesActionDelegate.java
	* ActionMessages.properties

2004-05-28 Mikhail Khodjaiants
	Removed diassembly editor actions. 
	* plugin.xml	

2004-05-27 Mikhail Khodjaiants
	Display global variables in the Variables view.
	* CDebugImages.java
	* CDTDebugModelPresentation.java