@@ -104,3 +104,5 @@ DisassemblyFontDefinition.description=The font used in the Disassembly view.
 
 RefreshAction.label=Refresh
 RefreshAction.tooltip=Refresh View's Content
+AutoRefreshAction.label=Auto-Refresh
+AutoRefreshAction.tooltip=Automatically Refresh View's Content
